updates on api-docs
