# routes/index.js
@@ -1,0 +1,8 @@
+const router = require("express").Router();
+
+router.use("/auth", require("./authRoutes"));
+router.use("/books", require("./bookRoutes"));
+
+router.use("/", require("./swagger"));
+
+module.exports = router;
